--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: page
-title: My website
-subtitle: This is where I will tell my friends way too much about me
-use-site-title: true
+title: Scott Huston
+subtitle: 
+use-site-title: False
 ---
 
 <div class="posts-list">
