change subtitle "a collection..."

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: page
 title: Scott Huston
-subtitle: 
-use-site-title: False
+subtitle: A collection of thoughts and projects
+use-site-title: True
 ---
 
 <div class="posts-list">
