change "use-site-title" to false

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: page
 title: Scott Huston
 subtitle: A collection of thoughts and projects
-use-site-title: True
+use-site-title: False
 ---
 
 <div class="posts-list">
